@@ -12,26 +12,7 @@
     <name>Server</name>
     <description>A server project using Socket.IO</description>
 
-    <repositories>
-        <repository>
-            <id>github</id>
-            <name>GitHub Roshanlam Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/roshanlam/mini-maven-repo</url>
-        </repository>
-    </repositories>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>22</source>
-                    <target>22</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 
     <!-- Dependencies -->
     <dependencies>
